# value_at_risk_dashboard

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  HowToSetupCodex.md  README.md  VAR_CALCULATION_LOGIC.md  docker-bake.hcl  docker-compose.yml  package-lock.json  pyproject.toml
backend/: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  routes.py
backend/app/api/dependencies/: filters.py  strategies.py
backend/app/api/endpoints/: dates.py  simulations.py  var.py
backend/app/core/: config.py  constants.py
backend/app/db/: base.py  models.py  seed.py  session.py
backend/app/db_ch/: base.py  models.py  session.py
backend/app/db_pg/: models.py  session.py
backend/app/models/: var.py
backend/app/models/domain/: factor_var_result.py  filters.py  specifications.py  strategies.py
backend/app/queries/: exposure_query.py  scenario_pl_query.py
backend/app/repositories/: base_repository.py  exposure_repository.py  scenario_pl_repository.py  simulation_repository.py  snapshot_date_repository.py  volatility_repository.py
backend/app/services/: date_service.py  simulation_service.py  var_service.py  volatility.py
backend/tests/: __init__.py  test_domain_factor_var.py  test_query_integrity.py  test_simulated_ranking.py  test_var_api.py
frontend/: .dockerignore  .env.local.example  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppHeader.tsx  SettingsPanel.tsx
frontend/components/dashboard/: AssetDetailsTable.tsx  DailyReportView.tsx  DashboardNavigation.tsx  DriverCommentaryPanel.tsx  FactorGrossRiskChart.tsx  FiltersBar.tsx  MarketSignalGauge.tsx  NewsPanel.tsx  ScenarioDistributionChart.tsx  SimulationInputTable.tsx  SummaryCards.tsx  TimeseriesControls.tsx  VarBreakdownDonut.tsx  VarChartCard.tsx  VarContributionChart.tsx  VarPlTable.tsx  VarWaterfallChart.tsx
frontend/components/ui/: button.tsx  card.tsx  select.tsx  skeleton.tsx  switch.tsx
frontend/hooks/: useTheme.ts
frontend/lib/: branchFilters.ts  constants.ts  dailyReport.ts  metrics.ts
frontend/tests/: AssetDetailsTable.spec.tsx  SummaryCards.spec.tsx  dailyReport.spec.ts  setup.ts
frontend/types/: var.ts
infra/nginx/: default.conf
