[project]
name = "var-backend"
version = "0.1.0"
description = "Value at Risk API prototype"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "anyio<4.7",
    "fastapi>=0.110",
    "httpx>=0.27,<0.28",
    "starlette>=0.40,<0.49",
    "uvicorn>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "clickhouse-sqlalchemy>=0.3.2",
    "ipykernel>=7.1.0",
    "jpholiday>=1.0.3",
    "openpyxl>=3.1.2",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflake
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "B023",  # variable bindings
    "E501",  # line too long
]

[tool.pylint]
disable = "all"
enable = "E1101"

[tool.mypy]
python_version = "3.9"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.uv]
allow-insecure-host = ["pypi.python.org", "files.pythonhosted.org", "pypi.org", "github.com"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
